# fypm

./: .gitattributes  .gitignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  fypm_theme  package.json  source.zsh  taskrc_model  update-fork
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: api.yml  cli.yml  commitlint.yml  lib.yml  rust.yml
.trunk/: trunk.yaml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: mod.rs  task.rs  time.rs
api/src/utils/: get.rs  mod.rs
cli/: Cargo.toml  diesel.toml
cli/migrations/2024-08-05-201931_create_tables/: down.sql
cli/migrations/2024-08-07-203718_create_tables/: down.sql
cli/src/: main.rs
cli/src/api/: index.rs  mod.rs  task.rs  time.rs
cli/src/commands/: init_day.rs  instance.rs  mod.rs  timew.rs  worktime.rs
cli/src/commands/task/: add.rs  list.rs  mod.rs  update.rs
cli/src/db/: mod.rs  models.rs  schema.rs
cli/src/func/: action.rs  command.rs  completion.rs  dialog.rs  list.rs  matchs.rs  mod.rs
cli/src/handlers/: aliases.rs  config.rs  database.rs  date.rs  filters.rs  mod.rs  worktime.rs
cli/src/tests/: action.rs  mod.rs  task.rs
cli/src/tests/lib/: mock.rs  mod.rs
cli/src/utils/: get.rs  mod.rs  term.rs  verify.rs
cli/src/values/: constants.rs
config/: aliases.zsh  fypm.theme  fywrc  fywrc.zsh  init_scheduler.zsh  taskrc_model  vars.zsh
config/vit/: config.ini
config/vit/keybinding/: vi.ini
config/vit/theme/: fypm.py
desktop/: build.rs  tauri.conf.json
desktop/src/: lib.rs  main.rs
docs/fypm/: Roadmap.canvas  match_inforelat_and_sequence.canvas
docs/fypm/.obsidian/: community-plugins.json  hotkeys.json  workspace.json
docs/fypm/Workflow/: Rules.md
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/scripts/: serve
frontend/src/: main.rs
frontend/src/components/: app.rs  (+7 more)
hooks/: on-add.a_type_checker.fypm  on-add.recurrence_dates.fypm  on-modify.fypm  on-modify.timewarrior
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/utils/: date.rs  matchs.rs  mod.rs  parser.rs
lib/src/values/: comments.rs  constants.rs  enums.rs  err.rs  mod.rs  structs.rs
migrations/2024-08-05-201931_create_tables/: up.sql
migrations/2024-08-07-203718_create_tables/: up.sql
scripts/: _taallatels  _tadatels  _tals  _transform_tw_dates_to_iso_  _verify_active_tasks_  _verify_alarm_tasks_  _verify_eventual_tasks_  clear_test_dir.sh  container  on-container_test.bash  on-container_test.sh  proadd  prorm  rpms_aliases  taadd  taadd-anm  taadd-msc  taadd-pll  taadd-seq  taadd-ser  taaddproj  taaddsub  taaladd  taalls  taalrm  taban  tachkls  taclose  tacodel  tacopend  tadone  taest  taf  tagclose  tagopen  tahelp  talc  tals  tan  tanext  (+35 more)
scripts/deprecated/: _tagoals  taadd-bok  taaddbook  taalclear (deprecated)  taandl  taday (deprecated)  tahbtls (deprecated)  tarecur (deprecated)  tatsub (deprecated)  tgetuuid  tgetwt
scripts/done/: _tadatels  taadd-brth  taadd-msc  taadd-seq  taban  tacodel (done)  tacopend (done)  tadone (done)  tan (done)  tapas  tastop (done)  ticen (done)  tils  tin (done)  tir (done)  tusched
scripts/fypm/: install.sh  test.sh
scripts/pending/: _tals  _verify_alarm_tasks_  _verify_overdue_  oopen-prog  tagopen  tanext  tapp  tascripts  tisleep  tmxs-goals  tmxs-taalwarn  tmxs-taftypes  tmxs-tasks  unc_deleted  worktime
src/: build.rs  main.rs  subcommands.rs
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src/api/: index.rs
src/commands/: init_day.rs  mod.rs  timew.rs  worktime.rs
src/db/: models.rs  schema.rs
src/func/: action.rs  actions.rs  command.rs  completion.rs  date.rs  dialog.rs  list.rs  matchs.rs  mod.rs  parser.rs
src/handlers/: aliases.rs  config.rs  data_bowl.rs  database.rs  filters.rs  mod.rs
src/subcommands/: daemon.rs  init_day.rs  instance.rs  mod.rs  task.rs  timew.rs  worktime.rs
src/tests/: action.rs  mod.rs  task.rs
src/utils/: comments.rs  constants.rs  enums.rs  err.rs  extract.rs  get.rs  mod.rs  paths.rs  read.rs  structs.rs  term.rs  verify.rs  write.rs
src/values/: enums.rs  structs.rs
(+19 files in other folders)
