[package]
name = "fypm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.1", features = ["cargo"] }
colored = "2.1.0"
daemonize = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dirs = "5.0.1"
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["v5"] }
toml = "0.8.8"
dialoguer = "0.11.0"
