[package]
name = "fypm_cli"
version = "0.3.0"
description = "Four Years Productivity Manager: The productivity manager for Four Years Workflow."
license = "MIT"
edition = "2021"

[features]
fysm = []

[dependencies]
rocket = "0.5.1"
chrono = "0.4.31"
colored = "2.1.0"
daemonize = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dirs = "5.0.1"
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["v7"] }
toml = "0.8.8"
dialoguer = "0.11.0"
regex = "1.10.3"
enigo = "0.1.3"
clap = { version = "4.5.0", features = ["derive"] }
clap_complete = { version = "4.5.29", features = ["unstable-dynamic"] }
crossterm = "0.27.0"
strfmt = "0.2.4"
itertools = "0.13.0"
tmux_interface = "0.3.2"
terminal_size = "0.3.0"
strum_macros = "0.26.4"
diesel = { version = "2.2.2", features = ["sqlite"] }
ratatui = "0.27.0"
serde_ini = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
tokio = "1.41.1"
fypm_lib = { path = "../lib" }
rocket_cors = "0.6.0"
