[package]
name = "fypm_lib"
version = "0.3.0"
authors = ["Myna <var.devmyna@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
chrono = "0.4.31"
regex = "1.10.3"